# manggis

./: .gitignore  Cargo.toml
examples/: Cargo.toml
examples/kafka/: main.rs
examples/kafka-consumer/: main.rs
examples/kafka-producer/: main.rs
examples/mongo/: main.rs
examples/redis/: main.rs
examples/runtime/: main.rs
manggis/: Cargo.toml
manggis/src/: lib.rs
manggis/src/channelprocessor/: mod.rs
manggis/src/error/: mod.rs
manggis/src/middleware/: kafka.rs  mod.rs  mongo.rs
