[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead.
[dev-dependencies]
rdkafka = { version = "0.26", features = ["cmake-build"] }
async-std = { version = "1.9.0", features = ["attributes"] }
backoff = "0.1.5"
chrono = "0.4.0"
clap = "2.18.0"
env_logger = "0.7.1"
hdrhistogram = "7.0.0"
maplit = "1.0.2"
rand = "0.3.15"
regex = "1.1.6"
smol = "1.2.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "*"
log = "*"
manggis = {path = "../manggis"}
uuid = "0.8.2"
mongodb = "2.0.0-beta"


[[example]]
name = "kafka"
path = "kafka/main.rs"

[[example]]
name = "kafka-producer"
path = "kafka-producer/main.rs"

[[example]]
name = "kafka-consumer"
path = "kafka-consumer/main.rs"

[[example]]
name = "mongo"
path = "mongo/main.rs"

[[example]]
name = "runtime"
path = "runtime/main.rs"
