[package]
name = "manggis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.26.0", features = ["cmake-build"] }
async-std = { version = "1.9.0", features = ["attributes"] }
backoff = "0.1.5"
chrono = "0.4.0"
clap = "2.18.0"
env_logger = "0.7.1"
hdrhistogram = "7.0.0"
maplit = "1.0.2"
rand = "0.8.3"
regex = "1.1.6"
smol = "1.2.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "*"
log = "*"
uuid = "0.8.2"
mongodb = "2.0.0-beta"
config = "0.11"
